--- a/style.css
+++ b/style.css
@@ -222,6 +222,11 @@ body {
   box-shadow: 0 3px 8px rgba(0,0,0,0.25);
   transition: box-shadow 0.25s ease, transform 0.25s ease, height 0.25s ease;
 }
+#site-logo {
+  cursor: pointer;
+  z-index: 9999;
+  position: relative;
+}
 
 .site-header.shrink .logo {
   height: 45px;
